	manually when you change the text.

- added WMTabView
- added WMGetColorPanelColor(WMColorPanel *panel)
- made WMGetUDStringForKey() to only return a reference to the string, not a
  wstrdup()'ed copy. DO NOT FREE IT ANYMORE!
- added MultiByteText option to userdefaults file to control use of multibyte
  string drawing functions


changes since wmaker 0.52.0:
............................

- added int WMGetBrowserMaxVisibleColumns(WMBrowser *bPtr);


changes since wmaker 0.51.2:
............................

- added WMColorWellDidChangeNotification
- added wfindfileinarray()
- fixed bug in window title setting 
	(MANOME Tomonori <manome@itlb.te.noda.sut.ac.jp>)

changes since wmaker 0.51.1:
............................

- wusergnusteppath() will return a statically allocated string now.
 DO NOT FREE IT ANYMORE!!



changes since wmaker 0.51.0:
............................

- applied c++ compat header patch from Martynas Kunigelis <mkunigelis@alna.lt>
- added WMSetTextFieldBeveled()
- removed W_GC() : use WMColorGC() instead
- added WMCreatePixmap()
- changed WMSetTextFieldEnabled() to WMSetTextFieldEditable()

changes since wmaker 0.50.1:
............................

- fixed various bugs
- added patch from Franck Wolff <frawolff@club-internet.fr>, with
  many fixes and enhancements
- added notification queues, asynchronous notifications etc.
- added WMSetBrowserDoubleAction()
- fixed list double click action

changes since wmaker 0.50.2:
............................

- added wsetabort() - look WUtil.h
- fixed bug in WMList resize
- added notification sending when changing textfield programatically
- removed WMHideWindow()
- fixed bug in WMCloseWindow()
- added textfield selection patch
- added color panel code
- added auto name completion for the file panel
- added function to select text range, and to set cursor position in text
  fields programatically

changes since wmaker 0.20.3:
............................
